added R/load.R to before_chapter_script

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,4 +1,6 @@
 book_filename: "stock-book"
 chapter_name: "Chapter "
 output_dir: "book-output"
-before_chapter_script: ["./R/functions.R"]
+before_chapter_script: ["./R/load.R", "./R/functions.R"]
+rmd_files: ["index.Rmd",
+    "moving-averages.Rmd"]
