removed before_chapter-script temporarily

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,6 +1,4 @@
 book_filename: "stock-book"
 chapter_name: "Chapter "
 output_dir: "book-output"
-before_chapter_script: ["./R/load.R", "./R/functions.R"]
-rmd_files: ["index.Rmd",
-    "Cl-SMA20-Crossover.Rmd"]
+rmd_files: ["index.Rmd", "simple-sma.Rmd"]
