--- a/_output.yml
+++ b/_output.yml
@@ -1,6 +1,6 @@
 bookdown::gitbook:
     css: custom_styles.css
     includes:
-        in_footer: ga.html
+        in_header: ga.html
 bookdown::pdf_book:
     keep_tex: yes
